<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lex.executorservicedemo.MainActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/title_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/fixTheadPool"
                style="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fix_thread_pool" />

            <Button
                android:id="@+id/cacheTheadPool"
                style="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cache_thread_pool" />

            <Button
                android:id="@+id/singalTheadPool"
                style="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_thread_pool" />

            <Button
                android:id="@+id/scheduleTheadPool"
                style="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/schedule_thread_pool" />

            <Button
                android:id="@+id/singleScheduleTheadPool"
                style="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_schedule_thread_pool" />
        </LinearLayout>
    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
